# proof-of-concept

./: .gitignore  LICENSE
LocalFunctionProj/: HttpExample.cs  LocalFunctionProj.csproj
LocalFunctionProj/Properties/: launchSettings.json
MathLibrary/: MathLibrary.sln
MathLibrary/MathLibrary/: MathLibrary.h  MathLibrary.vcxproj
asio-example/: asio-example.sln
asio-example/NetClient/: CMakeLists.txt  NetClient.vcxproj  NetClient.vcxproj.filters  SimpleClient.cpp  linux_helper.h
asio-example/NetCommon/: CMakeLists.txt  NetCommon.cpp  NetCommon.vcxproj  NetCommon.vcxproj.filters  dbg_dump.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  olc_net.h  person.pb.cc  person.pb.h  person.proto  singleton.h
asio-example/NetCommon/proto/: person.proto
asio-example/NetLog/: CMakeLists.txt  NetLog.cpp  NetLog.h  NetLog.vcxproj  NetLog.vcxproj.filters  NetLogImpl.cpp  NetLogImpl.h  pch.h
asio-example/NetPopup/: NetPopup.def  NetPopup.h  NetPopup.vcxproj  NetPopup.vcxproj.filters  NetPopupImpl.cpp  NetPopupImpl.h  dllmain.cpp  pch.h
asio-example/NetServer/: CMakeLists.txt  NetServer.vcxproj  NetServer.vcxproj.filters  SimpleServer.cpp
asio-example/WinFormCpp/: MyForm.cpp  MyForm.h  WinFormCpp.vcxproj
asio-example/_cmake_files/: include_boost.cmake  include_protobuf.cmake  pch_support.cmake  set_build_type.cmake
asio-example/_vs_props/: boost.props  protobuf.props  protobuf.vsprops
asio-example/asio-example/: CMakeLists.txt  asio-example.vcxproj  asio-example.vcxproj.filters  asio_example.cpp
asio-example/protobuf-example/: CMakeLists.txt  protobuf-example.cpp  protobuf-example.vcxproj  protobuf-example.vcxproj.filters
asio-example/unitTest-NetLog/: unitTest-NetLog.cpp  unitTest-NetLog.vcxproj  unitTest-NetLog.vcxproj.filters
asm/: simple_io.S  test_io.S
asm/calling-convention/: cdecl.S  cdecl64.S  main.c  main64.c
asm/lib-dynamic/: libdyn.S  libdyn64.S  main.c
drafts/: drafts.sln
drafts/ConsoleApplication1/: ConsoleApplication1.cpp
drafts/ConsoleApplication2/: interval_map.cpp
drafts/interval-map/: interval-map.vcxproj  main.cpp
external_sdk/: build_boost_static_x64_msvc_14_3.bat  readme.txt
hacker-Rank/: hacker-Rank.sln
hacker-Rank/problem_00/: Makefile  macro.h  macro.hpp  main.cpp  problem_00.vcxproj  problem_00.vcxproj.filters
hacker-Rank/problem_01/: problem_01.cpp  problem_01.vcxproj  problem_01.vcxproj.filters
hacker-Rank/problem_02/: problem_02.cpp  problem_02.vcxproj  problem_02.vcxproj.filters  test.txt  test2.txt
hacker-Rank/problem_03/: Makefile  problem_03.cpp  problem_03.vcxproj  problem_03.vcxproj.filters  test.txt
hacker-Rank/problem_04/: problem_04.cpp  problem_04.vcxproj  problem_04.vcxproj.filters  test.txt
hacker-Rank/problem_05/: problem_05.cpp  problem_05.vcxproj  problem_05.vcxproj.filters
hacker-Rank/problem_06/: problem_06.cpp  problem_06.vcxproj  problem_06.vcxproj.filters  test.txt
hacker-Rank/problem_07/: problem_07.cpp  problem_07.vcxproj  problem_07.vcxproj.filters  test.txt
hacker-Rank/problem_08/: problem_08.cpp  problem_08.vcxproj  problem_08.vcxproj.filters
hacker-Rank/problem_09/: problem_09.cpp  problem_09.vcxproj  problem_09.vcxproj.filters  test.txt
hacker-Rank/problem_10/: problem_10.cpp  problem_10.vcxproj  problem_10.vcxproj.filters
hacker-Rank/problem_11/: problem_11.cpp  problem_11.vcxproj  problem_11.vcxproj.filters
hacker-Rank/problem_12/: problem_12.cpp  problem_12.vcxproj  problem_12.vcxproj.filters
hacker-Rank/problem_13/: problem_13.cpp  problem_13.vcxproj  problem_13.vcxproj.filters
hacker-Rank/problem_14/: problem_14.cpp  problem_14.vcxproj  problem_14.vcxproj.filters
hacker-Rank/problem_15/: problem_15.cpp  problem_15.vcxproj  problem_15.vcxproj.filters  test.txt
just-4-fun/: just-4-fun.sln
just-4-fun/0-1-knapsack-problem/: 0-1-knapsack-problem.cpp  0-1-knapsack-problem.vcxproj  0-1-knapsack-problem.vcxproj.filters
just-4-fun/array/: array.cpp  array.vcxproj
just-4-fun/cache/: LFUCache.cpp  LFUCache.h  LRUCache.cpp  LRUCache.h  cache.vcxproj  cache.vcxproj.filters  main.cpp  test.txt
just-4-fun/const/: a.out  file1.s  (+3 more)
leetcode/: leetcode.sln
non-cross-primitive/socket/linux/server/: CMakeLists.txt  tcp-server-poll.cpp  tcp-server-select.cpp  tcp-server-zero.cpp  udp-server-nonblock.cpp  udp-server-zero.cpp
pseudo-Com/: pseudo-Com.sdf  pseudo-Com.sln
pseudo-Com/Common/: AtomicSync.h  CLogDispatcherImpl.cpp  CLogDispatcherImpl.h  CLogHandlerImpl.cpp  CLogHandlerImpl.h  CMakeLists.txt  CRefCounter.cpp  CRefCounter.h  CSmartPtr.h  CSmartPtr.hpp  Common.cpp  Common.vcxproj  Common.vcxproj.filters  DumpFunction.hpp  IBase.h  IConnectionPoint.h  IConnectionPointContainer.h  ILog.h  ILogHandler.h  RefCounter.cpp  RefCounter.h  SignalSlot.h  Singleton.h  Types.h  pch.h
pseudo-Com/pseudo-Com-test/: CMakeLists.txt  main.cpp  pseudo-Com-test.vcxproj
sfinae-Nicolai-Josuttis/: Checkpoint_01.h  Checkpoint_02.h  Checkpoint_03.h  Checkpoint_04.h  Customer.h  Makefile  String.cpp  String.h  macro.cpp  macro.h  main.cpp  sfinae-Nicolai-Josuttis.sln  sfinae-Nicolai-Josuttis.vcxproj  sfinae-Nicolai-Josuttis.vcxproj.filters
template-Problems/: deduction-Meyers-maneuver.cpp  dependent-name-resolution_1.cpp  dependent-name-resolution_2.cpp  dependent-name-resolution_3.cpp  dependent-name-resolution_4.cpp  increment-rvalue-friends.cpp  interference-specialization-overload.cpp  variable-using-templates.cpp
thesaurus/: 100_questions.cpp  ABA_problem.cpp  ABA_problem_solution.cpp  addressof.cpp  alignas.cpp  async.cpp  avada_kedavra.cpp  best_for.cpp  bind.cpp  cdecl.cpp  crtp.cpp  ctad.cpp  dangling.cpp  dangling2.cpp  data_race_dcl.cpp  ebco.cpp  explicit.cpp  function.cpp  init.cpp  init2.cpp  invoke.cpp  message_passing.cpp  modification_order.cpp  modification_order2.cpp  noexcept.cpp  packaged_task.cpp  pvc.cpp  race_condition.cpp  raii.cpp  reference_wrapper.cpp  slicing.cpp  slicing2.cpp  static.cpp  static_cast_inher.cpp  structured_bindings.cpp  thread_pool.cpp  thread_pool.h  tuple.cpp  ub_optimized.cpp  vtbl.cpp
(+23 files in other folders)
